<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tourist">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_background_filled"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLength="18"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/til1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_background_filled"
            android:hint="@string/hint_last_name"
            android:inputType="text"
            android:maxLength="18"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/til2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_born_date"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_background_filled"
            android:hint="@string/hint_date_born"
            android:inputType="text"
            android:maxLength="18"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/til3">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_citizenship"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_background_filled"
            android:hint="@string/hint_citizenship"
            android:inputType="text"
            android:maxLength="18"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/til4">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passport_number"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_background_filled"
            android:hint="@string/hint_passport_number"
            android:inputType="text"
            android:maxLength="18"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/til5">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_passport_date"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_background_filled"
            android:hint="@string/hint_passport_date"
            android:inputType="text"
            android:maxLength="18"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/text_cursor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="123dp" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>